<?xml version="1.0"?>
<package format="3">
  <name>robot_base</name>
  <version>0.1.0</version>
  <description>Robot Base - Basic robotic vehicle motor control and teleop functionality for AutoSLAM system.</description>
  <maintainer email="user@example.com">user</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
